# catat

./: README.md  pyproject.toml
src/catat/: main.py
src/catat/module/: display.py  util.py
