[project]
name = "catat"
version = "0.1.0"
description = "Catat Uang"
authors = [
    {name = "Naufal Aldy Pradana", email = "blitzaldykazu@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
